--- a/app/views/sub/Second.html.erb
+++ b/app/views/sub/Second.html.erb
@@ -1,7 +1,9 @@
 <h1>Sub#Second</h1>
-<p>Find me in app/views/sub/Second.html.erb</p>
 
-
-<p><%= @sub %> got a max score of <%= @maxu %></p>
+<h1><%= @sub %> got a max score of <%= @maxu %></h1>
 
    
+<%= form_with url: '/score/list', method: :get, data:{turbo:false} do |form| %>
+   
+    <%= form.submit "Overall score" %>
+<% end %>
